plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

test {
    jvmArgs "-javaagent:/Users/ivansesar/.gradle/caches/modules-2/files-2.1/net.bytebuddy/byte-buddy-agent/1.15.11/a38b16385e867f59a641330f0362ebe742788ed8/byte-buddy-agent-1.15.11.jar"
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.mockito:mockito-core:5.1.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.1.1'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
    testImplementation 'org.mockito:mockito-inline:5.+'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//     SLF4J API
    implementation 'org.slf4j:slf4j-api:2.0.9'

    // Logback for SLF4J Implementation
    implementation 'ch.qos.logback:logback-classic'
    implementation 'ch.qos.logback:logback-core'


    // Janino (required by Logback in some cases)
    implementation 'org.codehaus.janino:janino:3.1.10'

}

tasks.named('test') {
    useJUnitPlatform()
}
